--- a/css/style.css
+++ b/css/style.css
@@ -314,6 +314,9 @@ textarea {
   height: 120px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
+  padding-top: 12px;
+  padding-left: 16px;
+  font-size: 12px;
 }
 
 .form-checkbox {
