--- a/css/style.css
+++ b/css/style.css
@@ -295,19 +295,19 @@ textarea {
   height: 40px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
-  border-color: var(--second-color);
 }
 
 .form-items-input:focus {
   background: none;
   color: var(--text-color);
+  outline: 1px solid var(--hover-color);
 }
 
 .form-items-input:focus + .form-icon-img {
   fill: var(--hover-color);
 }
 .form-items-input:focus {
-  border-color: var(--hover-color);
+  outline: 1px solid var(--hover-color);
 }
 #commit {
   widows: 100%;
@@ -318,16 +318,37 @@ textarea {
   padding-left: 16px;
   font-size: 12px;
 }
+#checkbox {
+  appearance: none;
+}
 
+.span-checkbox {
+  width: 16px;
+  height: 15px;
+  display: inline-block;
+  background-color: var(--wait);
+  outline: 2px solid var(--text-color);
+  border-radius: 2px;
+  margin-right: 8px;
+}
+.span-img {
+  width: 11px;
+  height: 8px;
+  margin-left: 3px;
+  margin-top: 3px;
+}
 .form-checkbox {
   display: flex;
   align-items: center;
 }
-
+#checkbox:checked + .span-checkbox {
+  background-color: var(--hover-color);
+  outline: 0px;
+  border-radius: 2px;
+}
 .form-checkbox > input {
   width: 16px;
   height: 15px;
-  margin-right: 9px;
 }
 
 .form-checkbox > label {
@@ -339,6 +360,10 @@ textarea {
 
 .contract {
   margin-left: 5px;
+  font-size: 14px;
+  line-height: 24px;
+  line-height: 146%;
+  letter-spacing: 3%;
 }
 
 .form-button {
@@ -376,6 +401,7 @@ input {
 textarea:focus {
   background: none;
   color: var(--text-color);
+  outline: 1px solid var(--hover-color);
 }
 label {
   left: 0;
@@ -797,6 +823,9 @@ address {
 .subscribe-cont {
   display: flex;
 }
+.subscribe-form {
+  display: flex;
+}
 .subscribe-button {
   width: 200px;
   height: 50px;
@@ -829,6 +858,7 @@ address {
 .subscribe-input:focus {
   border-color: var(--hover-color);
   color: var(--wait);
+  outline: 1px solid var(--hover-color);
 }
 .subscribe-title {
   color: var(--wait);
